// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup (snapshots) > com className customizada no grupo 1`] = `
<div
  aria-required="false"
  class="grid grid-cols-2 gap-4"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="comum"
      role="radio"
      tabindex="-1"
      type="button"
      value="comum"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="comum"
    >
      Receita comum
    </label>
  </div>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="especial"
      role="radio"
      tabindex="-1"
      type="button"
      value="especial"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="especial"
    >
      Receita especial
    </label>
  </div>
</div>
`;

exports[`RadioGroup (snapshots) > estado com grupo desabilitado 1`] = `
<div
  aria-required="false"
  class="grid gap-2"
  data-disabled=""
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <div>
    <button
      aria-checked="true"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-disabled=""
      data-radix-collection-item=""
      data-state="checked"
      disabled=""
      id="comum"
      role="radio"
      tabindex="-1"
      type="button"
      value="comum"
    >
      <span
        class="flex items-center justify-center"
        data-disabled=""
        data-state="checked"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
      </span>
    </button>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="comum"
    >
      Receita comum
    </label>
  </div>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="especial"
      role="radio"
      tabindex="-1"
      type="button"
      value="especial"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="especial"
    >
      Receita especial
    </label>
  </div>
</div>
`;

exports[`RadioGroup (snapshots) > estado com item individual desabilitado 1`] = `
<div
  aria-required="false"
  class="grid gap-2"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="comum"
      role="radio"
      tabindex="-1"
      type="button"
      value="comum"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="comum"
    >
      Receita comum
    </label>
  </div>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="especial"
      role="radio"
      tabindex="-1"
      type="button"
      value="especial"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="especial"
    >
      Receita especial
    </label>
  </div>
</div>
`;

exports[`RadioGroup (snapshots) > estado com item selecionado 1`] = `
<div
  aria-required="false"
  class="grid gap-2"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div>
    <button
      aria-checked="true"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="checked"
      id="comum"
      role="radio"
      tabindex="-1"
      type="button"
      value="comum"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
      </span>
    </button>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="comum"
    >
      Receita comum
    </label>
  </div>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="especial"
      role="radio"
      tabindex="-1"
      type="button"
      value="especial"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="especial"
    >
      Receita especial
    </label>
  </div>
</div>
`;

exports[`RadioGroup (snapshots) > estado padrão (nenhum selecionado) 1`] = `
<div
  aria-required="false"
  class="grid gap-2"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="comum"
      role="radio"
      tabindex="-1"
      type="button"
      value="comum"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="comum"
    >
      Receita comum
    </label>
  </div>
  <div>
    <button
      aria-checked="false"
      class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow cursor-pointer focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
      data-radix-collection-item=""
      data-state="unchecked"
      id="especial"
      role="radio"
      tabindex="-1"
      type="button"
      value="especial"
    />
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="especial"
    >
      Receita especial
    </label>
  </div>
</div>
`;
